# fastapi-htmx-simple-app

./: README.md  pyproject.toml
app/: config.py  main.py  routes.py
app/static/css/: style.css
app/templates/: about.html  astronaut.html  base.html  index.html
app/templates/shared/: _base.html
