[tool.poetry]
name = "simple-website"
version = "0.1.0"
description = ""
authors = ["Ivan Kondratov"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jinja2-fragments = "^1.2.1"
python-multipart = "^0.0.6"
pytest = "^7.4.3"
pytailwindcss = "^0.2.0"
tinydb = "^4.8.0"
jinja2 = "^3.1.2"
uvicorn = "^0.24.0.post1"
fastapi = {extras = ["all"], version = "^0.104.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
